--- a/sitelayout.html
+++ b/sitelayout.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
-<html>
-<title>HTML Tutorial</title>
-<body>
 
-<h1>This is a heading</h1>
-<p>This is a paragraph.</p>
+    <head>
+        <link rel = "stylesheet" type = "text/css" href = "styling.css"/>
+    </head>
+   
+    <title>Cats</title>
 
-</body>
+    <body>
+        <h1>All about Cats!</h1>
+        <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque necessitatibus, nesciunt ipsa atque cupiditate aut suscipit hic quasi, error animi illum voluptate dignissimos veniam vitae eius in officia minima odit ducimus? Aut autem repellat non natus eaque, explicabo sit animi officia sunt molestias ipsa sapiente quos ex soluta harum illum.</p>
+    </body>
+
 </html>
