Added styling to nav bar and added description

--- a/sitelayout.html
+++ b/sitelayout.html
@@ -11,13 +11,14 @@
         <h1>All about Cats!</h1>
 
         <div class="navbar">
-            <a class="active" href="Cat Gallery">Home</a>
-            <a href=""></a>
+            <a class="active" href="Cat Gallery">Cat Gallery</a>
+            <a href="I love surprises"></a>
             <a href="">"Random Cat"</a>
-            <a href="SUPRISE ME!">About</a>
+            <a href="SUPRISE ME!">I love surprises</a>
         </div>
         
-        <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque necessitatibus, nesciunt ipsa atque cupiditate aut suscipit hic quasi, error animi illum voluptate dignissimos veniam vitae eius in officia minima odit ducimus? Aut autem repellat non natus eaque, explicabo sit animi officia sunt molestias ipsa sapiente quos ex soluta harum illum.</p>
+        <p> Welcome to our photo gallery of cats, where you will find a collection of adorable and fascinating feline portraits. We have photos of cats in different settings, from curled up sleeping in cozy beds to striking poses in the great outdoors. Some of the cats in our gallery are captured mid-play, 
+            while others are simply enjoying a quiet moment of contemplation.</p>
         
         <div class="row"> 
 
