Added Javascript file

--- a/sitelayout.html
+++ b/sitelayout.html
@@ -12,7 +12,7 @@
 
         <div class="navbar">
             <a class="active" href="Cat Gallery">Cat Gallery</a>
-            <a href="">"Random Cat"</a>
+            <a href="https://en.wikipedia.org/wiki/Cat">More about Cats</a>
             <button class="tab" onclick="pages(event, 'Dogs To Hate On')">Dogs</button>
             <a href="SUPRISE ME!">I love surprises</a>
         </div>
