Added link to CatGPT

--- a/sitelayout.html
+++ b/sitelayout.html
@@ -14,6 +14,7 @@
         <div class="navbar">
             <a class="active" href="Cat Gallery">Cat Gallery</a>
             <a href="https://en.wikipedia.org/wiki/Cat">More about Cats</a>
+            <a href="https://www.cat-gpt.com/">CatGPT</a>
         </div> 
 
             <p> Welcome to our photo gallery of cats, where you will find a collection of adorable and fascinating feline portraits. We have photos of cats in different settings, from curled up sleeping in cozy beds to striking poses in the great outdoors. Some of the cats in our gallery are captured mid-play, 
