Restyled scroll bars

--- a/sitelayout.html
+++ b/sitelayout.html
@@ -5,11 +5,11 @@
         <script type="text/javascript" src="script.js"></script>
     </head>
    
-    <title> Cat Blog</title>
+    <title> /ᐠ - ˕ -マ Cat Blog ^•ﻌ•^ฅ♡</title>
 
     <body>
       
-        <h1>All about Cats!</h1>
+        <h1>/ᐠ - ˕ -マ  *ฅ^•ﻌ•^ฅ* ✧･ﾟ:*All about Cats! *:･ﾟ✧^•ﻌ•^ฅ♡ /ᐠ. ｡.ᐟ\ᵐᵉᵒʷˎˊ˗</h1>
 
         <div class="navbar">
             <a class="active" href="Cat Gallery">Cat Gallery</a>
