Fixed bug with links

--- a/sitelayout.html
+++ b/sitelayout.html
@@ -11,7 +11,7 @@
     </h1>
 
     <div class="navbar">
-      <a class="active" href="Cat Gallery">Cat Gallery</a>
+      <a class="active" href="file:///C:/Users/amy%20chen/site/ICU4-1-1/sitelayout.html">Cat Gallery</a>
       <a href="https://en.wikipedia.org/wiki/Cat">More about Cats</a>
       <a href="https://www.cat-gpt.com/"> CatGPT</a>
     </div>
@@ -38,6 +38,10 @@
         src="https://i.chzbgr.com/full/9718941952/h25872A7C/luggage-bags"
         style="width: 100%"
       />
+      <img
+        src="https://i.pinimg.com/564x/63/56/0d/63560d6f23513b30d7ac73d355b5d8d8.jpg"
+        style="width: 100%"
+      />
     </div>
 
     <div class="row">
@@ -48,6 +52,14 @@
         />
         <img
           src="https://i.pinimg.com/564x/07/de/fc/07defc230c2b3930addb80d52cacc284.jpg"
+          style="width: 100%"
+        />
+        <img
+          src="https://i.pinimg.com/564x/dc/92/1e/dc921ec2e07f9437dc51f2a10694578d.jpg"
+          style="width: 100%"
+        />
+        <img
+          src="https://i.pinimg.com/564x/41/35/3f/41353ff1f7df4cfc6b970ff4d98cc82f.jpg"
           style="width: 100%"
         />
       </div>
@@ -61,6 +73,10 @@
           src="https://i.pinimg.com/564x/b1/f1/c7/b1f1c72f5648762062284eb2322b7960.jpg"
           style="width: 100%"
         />
+        <img
+          src="https://i.pinimg.com/474x/03/f7/f7/03f7f72584143aa3e99055148abcc3b7.jpg"
+          style="width: 100%"
+        />
       </div>
 
       <div class="column">
@@ -70,6 +86,14 @@
         />
         <img
           src="https://external-preview.redd.it/7L1fftI56d3XO978vHgekJ03tlG1HT9sEDLVxoxDbIE.jpg?width=960&crop=smart&auto=webp&v=enabled&s=c87f4d34eb95ee81d8e48a1be703d50fba2b95a9"
+          style="width: 100%"
+        />
+        <img
+          src="https://i.pinimg.com/564x/05/3d/85/053d85a68f80cd5ec5ee44dff9deb7a3.jpg"
+          style="width: 100%"
+        />
+        <img
+          src="https://i.pinimg.com/564x/9d/67/93/9d67939d0653ca22964afa03b09e0d7a.jpg"
           style="width: 100%"
         />
       </div>
