Added styling to CSS File

--- a/layout.html
+++ b/layout.html
@@ -15,7 +15,7 @@
 
 <body>
   <header>
-    <h1>Anime Movies to Numb the Pain</h1>
+    <h1>ANIME MOVIES TO NUMB THE PAIN</h1>
     <h2 id="cart">Your cart contains 0 movies</h2>
   </header>
   <div id="movies">
