Worked on Selector JS

--- a/layout.html
+++ b/layout.html
@@ -19,18 +19,20 @@
 
     <div class="select">
       <label for="selector">Select a Movie!:</label>
-    <select name="moviePicker" id="moviePicker">
-      <option value="378064">A Silent Voice</option>
-      <option value="12477">Grave of Fireflies</option>
-      <option value="530079">Ride Your Wave</option>
-      <option value="372058">Your Name.</option>
-      <option value="10494">Perfect Blue</option>
-      <option value="198375">The Garden of Words</option>
-      <option value="504253">I Want to Eat Your Pancreas</option>
-      <option value="92321">Into the Forest of Firefly Light</option>
-      <option value="4935">Howl's Moving Castle</option>
-      <option value="568160">Weathering With You</option>
-    </select></div>
+      <select name="moviePicker" id="moviePicker">
+        <option value="378064">A Silent Voice</option>
+        <option value="12477">Grave of Fireflies</option>
+        <option value="530079">Ride Your Wave</option>
+        <option value="372058">Your Name.</option>
+        <option value="10494">Perfect Blue</option>
+        <option value="198375">The Garden of Words</option>
+        <option value="504253">I Want to Eat Your Pancreas</option>
+        <option value="92321">Into the Forest of Firefly Light</option>
+        <option value="4935">Howl's Moving Castle</option>
+        <option value="568160">Weathering With You</option>
+      </select>
+      <button id="getButton">GET</button>
+    </div>
 
     <div id="movies"></div>
   
