Created basic button

--- a/layout.html
+++ b/layout.html
@@ -31,7 +31,7 @@
         <option value="4935">Howl's Moving Castle</option>
         <option value="568160">Weathering With You</option>
       </select>
-      <button id="getButton">GET</button>
+      <button type="button" id="getInfo">GET!</button>
     </div>
 
     <div id="movies"></div>
