Added more details for movies

--- a/layout.html
+++ b/layout.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <title>Anime Movies <br> To Numb The Pain</title>
+  <header><h1>Anime Movies <br> To Numb The Pain</h1></header>>
   <div class="select">
     <label for="moviePicker">Select a Movie!:</label>
     <select name="moviePicker" id="moviePicker">
@@ -26,9 +26,16 @@
   </div>
   <div id="movieInfo">
     <h2 id="movieTitle"></h2>
-    <p id="movieYear"></p>
-    <img id="moviePoster" src="" alt="Movie Poster">
+    <h3 id="movieYear"></h3>
+    <h3 id="ogTitle"><h3>
+    <p id="ogCountry"></p>
+    <p id="ogLang"></p>
+    <p id="runtime"></p>
+    <p id="budget"></p>
+    <p id="rating"></p>
     <p id="movieOverview"></p>
+    <img id="moviePoster" src="" alt="Movie Poster">
+  
   </div>
 </body>
 <script type="module" src="script.js"></script>
