Working copy of trailer

--- a/layout.html
+++ b/layout.html
@@ -23,19 +23,21 @@
       <option value="568160">Weathering With You</option>
     </select>
     <button type="button" id="getInfo">GET</button>
+    
   </div>
+
   <div id="movieInfo">
     <h2 id="movieTitle"></h2>
     <h3 id="movieYear"></h3>
     <h3 id="ogTitle"><h3>
     <p id="ogCountry"></p>
     <p id="ogLang"></p>
-    <p id="runtime"></p>
+    <p id="runtime"></p> 
     <p id="budget"></p>
     <p id="rating"></p>
     <p id="movieOverview"></p>
     <img id="moviePoster" src="" alt="Movie Poster">
-  
+    <iframe id="movieTrailer" src=""></iframe>
   </div>
 </body>
 <script type="module" src="script.js"></script>
