Changed budget to movie status

--- a/layout.html
+++ b/layout.html
@@ -45,7 +45,7 @@
         <p id="ogCountry"></p>
         <p id="ogLang"></p>
         <p id="runtime"></p>
-        <p id="budget"></p>
+        <p id="status"></p>
         <p id="rating"></p>
         <p id="movieOverview"></p>
       </div>
